--- a/src/components/movieCard/movieCard.module.css
+++ b/src/components/movieCard/movieCard.module.css
@@ -14,10 +14,11 @@
     position: absolute;
     text-align: center;
     padding: 16px;
+    height: 100%;
     width: 100%;
     opacity: 0;
     top: 0;
-    color: #f9d3b4;
+    color: orange;
 }
 
 .movie:hover {
@@ -57,7 +58,7 @@
 
 .movie div:nth-of-type(3) h3 {
     margin-top: 5px;
-    color: #f9d3b4;
+    color: #ffa570;
 }
 
 .movie:hover div:nth-of-type(2) {
