--- a/src/pages/App.css
+++ b/src/pages/App.css
@@ -1,21 +1,25 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-:root{
+:root {
     --font-raleway: "Raleway", sans-serif;
 }
 
-*{
+* {
     margin: 0;
-    border: 0;
+    border-radius: 1em;
     box-sizing: border-box;
 }
 
-body{
+/*212426*/
+
+body {
     font-family: var(--font-raleway);
-    background: #212426;
+    background: #232222;
 }
 
-#app{
+/*212426*/
+
+#app {
     padding: 4em;
     display: flex;
     justify-content: center;
@@ -23,49 +27,64 @@ body{
     flex-direction: column;
 }
 
-.logo{
-    max-width: 100%;
-    overflow: hidden;
+.logo {
+    width: 300px 300px;
+    height: 150px 90px;
+    flex-shrink: 0;
+    color: #6C0505;
+    text-shadow: 10px 8px 6px #000;
+    font-family: arial black;
+    font-size: 140px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+
 }
 
-.logo img{
-    width: 70%;
+.logo img {
+    width: 30em;
     height: auto;
     margin: auto;
     display: block;
+
 }
 
-.search{
-    width: 70%;
+.search {
+    width: 75%;
+    height: 90px;
     margin: 4rem 0 2rem;
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 1.5rem 1.75rem;
-    border-radius: 4rem;
-    background: #1f2123;
+    background: #1f1c1c;
     box-shadow: 5px 5px 7px #1c1d1f, -5px -5px 7px #222527;
     -webkit-box-shadow: 5px 5px 7px #1c1d1f, -5px -5px 7px #222527;
 }
 
-.search input{
-    flex:1;
-    border:none;
+.search input {
+    flex: 1;
+    border: none;
     padding-right: 1rem;
     outline: none;
-    color:#a1a1a1;
-    background: #1f2123;
+    color: white;
+    background: #1f1c1c;
     font-size: 1.5rem;
     font-weight: 500;
+    border-radius: 30em;
+
 }
 
-.search img{
-    width: 35px;
-    height: 35px;
+
+
+.search img {
+    width: 3rem;
+    height: 3rem;
     cursor: pointer;
+
 }
 
-.empty{
+.empty {
     width: 100%;
     margin-top: 3rem;
     display: flex;
@@ -75,46 +94,58 @@ body{
     color: #f9d3b4;
 }
 
-.container{
+/*f9d3b4*/
+
+.container {
     width: 100%;
     margin-top: 3rem;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-wrap: wrap;
+
 }
 
-@media screen and (max-width: 600px){
-    .app{
+.container img {
+    border-radius: 4em;
+}
+
+@media screen and (max-width: 600px) {
+    .app {
         padding: 4rem 2rem;
     }
-    .search{
+
+    .search {
         padding: 1rem 1.75rem;
         width: 100%;
     }
-    .search imput{
+
+    .search imput {
         font-size: 1rem;
     }
+
     .search img {
         width: 20px;
         height: 20px;
     }
 }
 
-@media screen and (max-width : 400px){
- .app{
-    padding: 4rem 1rem;
- }
- h1{
-    font-size: 2rem;
- }
- .container {
-    margin-top: 2rem;
- }
+@media screen and (max-width : 400px) {
+    .app {
+        padding: 4rem 1rem;
+    }
 
- .movie {
-    width: 100%;
-    margin: 1rem;
- }
+    h1 {
+        font-size: 2rem;
+    }
+
+    .container {
+        margin-top: 2rem;
+    }
+
+    .movie {
+        width: 100%;
+        margin: 1rem;
+    }
 
 }
